--- a/mcialwainc/index.html
+++ b/mcialwainc/index.html
@@ -146,8 +146,7 @@
             </section>
             <section>
                <h2>Conclusion: Designing With, Not Just For, People</h2>
-               <p>Designing for people means more than making interfaces usable, it means respecting how humans perceive, think, and feel. Human-centered design provides a framework for aligning systems with real human behavior, ensuring that technology supports rather than challenges users. ISO 9241-210 offers the structure needed to embed usability throughout a system’s life cycle, while IDEO’s Field Guide emphasizes empathy and creativity as drivers of meaningful innovation.
-</p>
+               <p>Designing for people means more than making interfaces usable, it means respecting how humans perceive, think, and feel. Human-centered design provides a framework for aligning systems with real human behavior, ensuring that technology supports rather than challenges users. ISO 9241-210 offers the structure needed to embed usability throughout a system’s life cycle, while IDEO’s Field Guide emphasizes empathy and creativity as drivers of meaningful innovation.</p>
                <p>By applying principles of perception, visual hierarchy, and the four UX laws, designers can reduce cognitive load, improve usability, and create experiences that feel intuitive and humane. Ultimately, designing for people is about humility accepting that technology must adapt to humans, not the other way around. When designers prioritize empathy, attention, and perception, they create systems that are not only functional, but genuinely empowering.</p>
             </section>
 
