--- a/mcialwainc/index.html
+++ b/mcialwainc/index.html
@@ -153,6 +153,7 @@
          </main>
 
          <footer>
+            <h3>References</h3>
             <p>DEO. (2015). The field guide to human-centered design. IDEO.org.</p>
             <p>International Organization for Standardization. (2019). ISO 9241-210: Ergonomics of human-system interaction—Part 210: Human-centered design for interactive systems. ISO.</p>
             <p>Yablonski, J. (2020). Laws of UX: Using psychology to design better products and services. O’Reilly Media.</p>
