--- a/andersenc/index.html
+++ b/andersenc/index.html
@@ -148,6 +148,70 @@ https://www.incose.org</li>
 
 
          <!-- Module 2.1 Blog Post Starts here -->
+          <article>
+          <header class="article-header">
+          <h2>Module 2.1 Blog Post</h2>
+          <h3>Human First</h3>
+          </header>
+
+          <p>When we talk about good design, we typically mean that something looks nice. The layouts are clean, the app doesn’t look outdated, the scheme is aesthetically pleasing, and so on. In reality, good design stretches far deeper than that. A lot of the time, the design most appealing to people is not the coolest looking design, but feels easy; you don't have to think too much when using it, you don't get confused or feel like you're fumbling around. That is more or less the essence of human-centered design.</p>
+
+          <h3>Human-centered Design</h3>
+
+          <p>Human-centered design means, in other words, that the systems are built around actual people, and not based on what’s trendy or what the system is supposed to be like by means of the designer’s thinking. It’s the construction of something that aligns with how people actually act. People become distracted, they skim, they don’t read everything, and they make decisions fast. If a system doesn’t match how people behave naturally, the system isn’t really usable, even if it is doing the job technically.</p>
+
+          <p>ISO 9241-210 describes human-centered design as an approach that involves understanding user needs and how they may interact with systems during design (International Organization for Standardization [ISO], 2019). One of the things I love about this is that it reminds you that design is not simply what the user sees. It’s about how users engage with the system. Designing for people is about building for people, who are not always perfect users; they inevitably make mistakes. It requires a design which fits the needs of the user as an individual without unlimited time and a lot of energy. Many people that use systems are multitasking. They’re on their phone, rushing, etc., and at the end of the day, they just want to get their tasks done without unnecessary difficulties.</p>
+
+          <p>Something this module made completely clear was that human-centered design always begins early, and probably a lot earlier than most people would assume. This is not just add-on material when the system is already built. It's what you design during early stages that dictates how easy your system will be to use. By designing something without regard for perception and attention, the system can rapidly turn into shambles. Even when the developers have done everything right, the user could still be overwhelmed by or be confused by this interface.</p>
+
+          <h3>ISO vs. IDEO</h3>
+
+          <p>The IDEO Field Guide is still human-centered design but is definitely more hands-on and real life than ISO. ISO comes off as more of a framework or a process. IDEO feels like you’re really studying people. It emphasizes empathy and understanding a user's experiences, not only what they say a user wants (IDEO.org, 2015). The difference matters: sometimes, until someone else is in the wrong spot, they don't even know whether something matters at all. Observing real users interact with a design teaches you something different: it can bring to light problems you would never see if only design based on guesses or assumptions. If we had to compare them I'd say ISO 9241-210 is basically a systematic plan for ensuring that human-centered design happens, and IDEO is kind of just the perspective and all this equipment that makes design feel more human. ISO ensures you don’t go off the rails.</p>
+
+          <h3>Perception and Visual Hierarchy</h3>
+
+          <p>The perception and visual hierarchy bit was also super relevant. People are not looking at a screen in the manner designers want them to. Much of the time, we scan, and our eyes go on to what looks most important. That's why the arrangement of information on a page is so important to us. Visual hierarchy tells your brain what to look at first. If a website is shown with 10 things of the same size on the same font, same color, uniform type of font usage and style on the same page, it can be hard to figure out how to start. It’d seem more like a wall of information than anything else. That’s when users begin to skip over things or click the wrong thing. If the main button disappears into the background, no one will seem to notice that at all. They’ll hesitate and question too much, or they’ll just exit. One of these is a checkout screen. It feels stressful if someone is trying to purchase something and there are a bunch of popups, random ads, a million little fields. If the checkout is nice and the main action button pops up, the user tends to feel more secure. That’s design and usability in a nutshell, it’s much bigger than aesthetics. Understanding how attention works will allow a designer to simply make the interface that little bit simpler for the user without throwing a ton of bells and whistles. It’s literally a matter of making things clearer. Easier to read on layouts, easier on labels, less on clutter, which gives the user a sense that they know what they are doing.</p>
+
+          <h3>UX Laws</h3>
+
+          <p>That concept also ties to Jakob’s Law. Jakob’s Law essentially states the users expect that a website or app will behave similar to other web and apps they are familiar with, because they are accustomed to using those tools (Krug, 2014). When people open their websites, they don't want to learn a brand new look and feel, every time they open the menu. That is why most apps have similar icons and layouts. People know those patterns, and that knowledge makes things faster. When designers pull too hard to be “different,” it can hurt the user experience. A site may look unique, but if a user cannot find the menu, cannot find the search bar, and doesn’t understand the icons then what is needed to dig through them quickly becomes annoying.</p>
+
+          <p>Designing for people means respecting people’s existing thought patterns and expectations. Fitts’s Law also connects very directly with usability. Fitts’s Law essentially states that the easier a target is to hit, the quicker the user can interact with it. If it is small or very far away, the time to click it takes longer (Interaction Design Foundation, n.d.). You can see this in real life all day, every day. Just as on mobile when buttons are very small, people just get the wrong click all the time. Another example is the close button on a popup being super small, squashed in a corner. That’s not an accident, and it is something that users find daunting and frustrating. If designers do design for people, they should design the buttons for the important stuff to be easy to hit, and provide enough space between clickable objects. They need to ensure the user is not fighting the interface just to do something simple. The design should enable movement of the user, not penalize them for having normal hands.</p>
+
+          <p>Hick’s Law states that the more options you provide a person, the longer they take to make the decision. Too many choices have the potential to leave individuals feeling overwhelmed (Interaction Design Foundation, n.d.). I can relate to this and this seems to happen all the time online. Even simple things like setting menus can be preposterous. You will be forced to choose among fifty options, half of which you don’t even understand the meaning. The users then either pick randomly, or leave everything on default because they aren’t ready for it. Good design is not just about adding features. If the goals for a user are not difficult to achieve, the design should reduce choices. People lose interest if they’re given too many choices at once, and that's when mistakes tend to happen. Miller’s Law ties into this too. Miller’s Law is the concept that people retain only so many things in their working memory at a single time. Basically, humans can only contain so much information in their head at a time (Interaction Design Foundation, n.d.). A design that bombards users with too much information makes it more difficult to process. The user begins forgetting what they read and what the goal of their work was and also becomes more agitated. This is why breaking information into chunks helps as well as why a simpler interface might seem better than a more complex one by design. Even if both platforms are doing the same thing, the one that upholds the principles of holding on to the human mind and memory, appears to be user friendly and more accessible will be preferred.</p>
+
+          <h3>Empathy</h3>
+
+          <p>Another aspect we’ve started covering in designing for people is empathy, which to be honest is the most important part of it. Empathy isn’t about being nice alone, which is to say, it is about realizing that users are emotion-bound people who have limits. When stressed or time-pressed, a system can either help them or just make things ten times worse. IDEO discusses empathy a lot and learning from the real users themselves, not just assumptions from the database (IDEO.org, 2015). That is why it’s important: The designer is not the user. The designer may get the system right exactly because they designed it but the person is seeing it for the first time. A human-centered design respects that premise and supports the user rather than expecting that individual to “figure it out.”</p>
+
+          <p>I also think empathy appears in little design details; things like explicit error messages, confirmation prompts, helpful labels or allowing people to undo things. Those elements increase a sense of safety for users of the system and reduce frustration.</p>
+
+          <h3>Wrapping Things Up</h3>
+
+          <p>All in all, this module really brought home the idea that human-centered design is not some fancy design trend. It’s a mindset and a process that enables systems to be simpler, more usable, in real life. ISO 9241-210 gives a systematic method for involving users and assessing designs through the process (ISO, 2019). IDEO adds the empathy and observation element, which helps designers really see users as people (IDEO.org, 2015). Perception and attention matter, as users fail to process information perfectly, and so visual hierarchy makes a difference in what they see and what they miss. UX laws such as Jakob’s, Fitts’s, Hick’s, and Miller’s also help explain why some designs seem smooth and others are frustrating to see playing into. So when we say ‘design for people’, we mean ‘design for normal human behavior. People skim, people forget, people get overwhelmed, and make mistakes. Therefore, the design of  the system should reflect that. If the system is constructed to align with those realities, it seems easier and flows more naturally. And if it’s not such, the system could still work, but it won’t seem like it was designed for people.</p>
+
+
+          <footer class="article-footer">
+    <h3>Sources</h3>
+    <ol>
+      <li>
+        IDEO.org. (2015). <em>The field guide to human-centered design</em> (1st ed.). IDEO.org.
+        <a href="https://www.designkit.org/resources/1">https://www.designkit.org/resources/1</a>
+      </li>
+      <li>
+        Interaction Design Foundation. (n.d.). <em>UX design laws</em>.
+        <a href="https://www.interaction-design.org/literature/topics/ux-design">https://www.interaction-design.org/literature/topics/ux-design</a>
+      </li>
+      <li>
+        International Organization for Standardization. (2019). <em>ISO 9241-210:2019 ergonomics of human-system interaction—Part 210: Human-centred design for interactive systems</em>.
+        <a href="https://www.iso.org/standard/77520.html">https://www.iso.org/standard/77520.html</a>
+      </li>
+      <li>
+        Krug, S. (2014). <em>Don’t make me think, revisited: A common sense approach to web usability</em> (3rd ed.). New Riders.
+      </li>
+    </ol>
+  </footer>
+</article>
 
          <!-- Module 2.2 Blog Post Starts here -->
 
