Update 2.1 Blog post
I need to lock in. I set a more serious tone for 2.1; I had already submitted 1.2 but edited it for my own sanity because it sounds immature of me to have it like that. I had to edit both parts because my pull request disappeared and history didnt save the link.

--- a/bendolphm/index.html
+++ b/bendolphm/index.html
@@ -41,7 +41,7 @@
          </article>
 
          <!-- Module 1.2 Blog Post Starts here -->
-<P>Welcome back to another blog post with your host... Marius Bendolph! It was an interesting week; A "super flu" followed by a stomach bug going around, a 3 day weekend, and feeling like its still Christmas time? It really is an interesting week, but not as interesting as our section .2 in module 1. Let's get into it, i'll fill you in!</P>
+<article>
           <P><strong>20JAN2026</strong></P>
           <h1>1.2 Blog Post: Thinking in Life Cycles</h1>
           <p>
@@ -305,6 +305,7 @@
                operations, maintenance, and disposal still matter, and standards like ISO 15288 and guidance like NASA’s handbook exist because
                consistent process execution is what turns complexity into outcomes (Holt, 2023; ISO/IEC/IEEE, 2015; NASA, 2016).
             </p>
+</article>
          <!-- Module 2.1 Blog Post Starts here -->
           <article>
             <header>
@@ -426,7 +427,7 @@
             
             <h2>How Early Design Choices Support or Hurt Usability</h2>
             <p>
-               Early stage design choices (layout, hierarchy, interaction patterns, and content structure) set the direction for the
+               Early stage design choices, such as layout, hierarchy, interaction patterns, and content structure, set the direction for the
                entire experience. If the foundation is built around human perception and cognition, usability becomes the natural
                result. If those factors are ignored, usability problems often show up later as “bugs,” “confusing UI,” or “user
                errors.”
