--- a/bendolphm/index.html
+++ b/bendolphm/index.html
@@ -321,7 +321,7 @@
             </header>
             
             
-            <h2>What Does Human-Centered Design Mean?</h2>
+            <h2>What Does Human-Centered Design Mean Exactly?</h2>
             <p>
                Human-centered design is an approach that prioritizes the needs, abilities, and limitations of users throughout the
                entire design lifecycle. Instead of designing for ideal conditions, HCD acknowledges real-world human behavior;
