Addition of Blog Post 2.1
Added Module 2.1 Blog Post.

--- a/pottsm/index.html
+++ b/pottsm/index.html
@@ -170,6 +170,63 @@ Systems that are unable to evolve over time will become obsolete extremely fast.
 
 
          <!-- Module 2.1 Blog Post Starts here -->
+        <article>
+            <header class="article-header">
+               <h2 style="text-align: center;">Module 2.1 Blog Post - Human First</h2>
+            </header>
+            <h3 style="text-align: center;">Design Begins with People</h3>
+            <p style="text-indent: 2em;">The concept of human-centered design is one that is talked about frequently, so much so that the importance of it is often lost through this repetition. It becomes more about the phrase and less about the actual meaning. Peeling back the layers of what it means to design for a human helps to ground the concept, allowing you to realize that it isn’t about making interfaces look good or following the latest trend, it is about how humans perceive and interact with the information provided. Designing with people in mind helps to expand from a singular perspective into being able to see multiple perspectives.</p><br>
+<p style="text-indent: 2em;">This article will explore this concept by understanding how perception, attention, and empathy help to shape the design. Two approaches to the human-centered design will be compared, ISO 9241-210 and IDEO’s Field Guide to Human-Centered Design, and a connection will be created between these ideas and the four UX laws: Jakob’s Law, Fitts’s Law, Hick’s Law, and Miller’s Law. 
+</p>
+<h3 style="text-align: center;">Human-Centered Design</h3>
+<p style="text-indent: 2em;">First published in 1999, the most used process in UX is the ISO 9241-210, a human-centered design approach that focuses on developing interactive systems that are useful and have good usability for users, focusing on their needs and requirements (Benjamin Franz, 2024). This concept is structured in a way that spotlights the usability and requirements, understanding the user, evaluating the design, refining that design, and then repeating the steps.
+<p style="text-indent: 2em;">The IDEO’s Field Guide is still a human-centered design approach; however, instead of the rigid, static process of ISO 9241-210, the Field Guide takes a more creative and empathetic approach. This concept encourages designers to look at the people that will utilize the system. Focusing on their stories and frustrations. It helps designers to understand the level of ambiguity that can be present, empowering them to discover over checking off a list. Allowing ambiguity as a part of the process can help to identify answers and innovation that may not be visible during a standard process, embracing optimism to find answers (IDEO, 2015).
+<p style="text-indent: 2em;">Both approaches focus on human-centered design, both have the same goal, to serve people, but their ways of serving are where they become different. ISO 9241-210, even in name, embodies a more consistent, measurable approach, whereas IDEO’s Field Guide, better suited name for its unique approach, focuses on empathy, exploration, and understanding problems.
+<p style="text-indent: 2em;">Utilizing both when designing could provide beneficial results as both attack different key areas. The ISO approach will allow for more accessibility and usability. The Field Guide will help you to uncover the issues and needs that may not have surfaced in previous investigations.
+</p>
+<h3 style="text-align: center;">Perception and Visual Hierarchy</h3>
+<p style="text-indent: 2em;">A screen with no words still tells a story. Each person that views this screen will see something different or may not see everything that another person sees. This is one of the most important things to understand when designing, people don’t and will not see everything on the screen. A user’s perception is always selective. They will only see what stands out. Whether that is something on the screen that aligns with their needs, or the omission of it, their attention will only be processed so much.
+ <p style="text-indent: 2em;">When creating a system, designers need to guide the user’s perception so that the story is conveyed in the proper, intended way. A visual hierarchy is a tool designers will use to help organize that story, providing a rhythm to the content, telling users where to look, what to do, and what they can ignore (Gerencer, 2025).
+<p style="text-indent: 2em;">The first UX law that will be discussed, Jakob’s Law, has relevancy when it comes to perception and visual hierarchy. This law, enabled in 2000, encourages designers to create a cumulative experience for users based on other websites they have visited, allowing them to focus more on the content instead of interface issues or design flaws (Yablonski, 2024). Familiar patterns can help to reduce a user’s cognitive load during a visit as they do not need to learn the new layout or design. A well-structured visual hierarchy combined with familiar elements can make even the most complex system seem simple and intuitive for the user.
+</p>
+<h3 style="text-align: center;">Attention</h3>
+<p style="text-indent: 2em;">Think about a website you have recently visited that was an overload of information upon initial visit. There are menus and options laid out in almost every corner, images of random events and people that don’t seem to correlate with the supposed journey. The harder you make it for the user to choose what to do, the more frustrated they become and the experience turns negative. Hick’s Law presents us with the notion that the more you present to a user, the more difficult it will be for said user to decide (Stevens, 2024). Your user’s attention is one of the hardest resources to control in any interaction. There needs to be a smooth experience for users to gain that attention and keep it. 
+<p style="text-indent: 2em;">Additionally, the time that is required for a user to reach their intended destination is crucial in developing an infrastructure that creates a positive experience. Fitts’s Law is helpful in this situation as it provides designers with an understanding of how humans move. By adhering to specific guidelines, designers can make sure that touch targets on mobile devices are large enough for fingers and in a desktop setting, focal points are in natural locations users expect.
+<p style="text-indent: 2em;">The final UX law this post will examine is Miller’s Law. People are only able to hold so much information at one time. The more the input exceeds the output in this situation, the users will struggle to mentally keep up with tasks becoming increasingly difficult as time progresses, increasing the risk of missed information and frustration (Yablonski, 2024). Chunking the content and breaking down long areas of text can help users absorb the content better and improve overall usability.
+<p style="text-indent: 2em;">The less time designers put into cognitive areas such as the examples above, the more the interface will feel overly complex and unintuitive to the user. Designers must find the right balance when designing systems, making sure the interfaces are as seamless and easy to use as can be allowed.
+</p>
+<h3 style="text-align: center;">Empathy</h3>
+<p style="text-indent: 2em;">When you design for people, you need to consider that their environment when accessing your system may not be the most ideal. You must acknowledge that they may be distracted while visiting, are looking for a short experience due to time constraints, may have personal attachments to the interactions provided, or just don’t understand the designer’s vision. 
+<p style="text-indent: 2em;">Empathy should be considered a hybrid skill, rather than a soft skill. It is a critical skill for any designer that wants to understand their users actions and why those chose them. As stated earlier, one of IDEO’s Field Guide’s main focal points is to encourage empathy. It allows designers to create experiences based on needs that are often missed in usability tests and keeps the user focused on your work and intended outcomes.
+</p>
+<h3 style="text-align: center;">Designing for People</h3>
+<p style="text-indent: 2em;">Developing a complex system is no easy task, there are many different user needs and requirements that you must consider; however, with the combination of a designer’s understanding of perception, attention, and empathy, with a hybrid approach of the more structured ISO and the creative Field Guide, the human-centered design becomes clear and well defined. 
+<p style="text-indent: 2em;">Anyone can make a slick system with modern interfaces and aesthetics, but if the human component is missing, the system fails. Designing for people reminds you to create with the intent to align with human needs and keeping those needs grounded in reality. It’s making sure you understand that there is no static path when catering to users as every element is a variable. A good designer will meet them at their threshold to reduce the cognitive load and create a positive UX journey.
+</p>
+<section id="sources">
+  <h3>Sources</h3>
+
+  <p>Benjamin Franz, M. K.-F. (2024). <em>Usabilitiy and User Experience Design.</em> Rheinwerk Computing.</p>
+
+  <p>Gerencer, T. (2025, August 12). Visual Hierarchy: Key UX Principles That Drive Results. Retrieved from Sessions College Web Site: 
+    <a href="https://www.sessions.edu/notes-on-design/visual-hierarchy-key-ux-principles-that-drive-results/">
+      https://www.sessions.edu/notes-on-design/visual-hierarchy-key-ux-principles-that-drive-results/
+    </a>
+  </p>
+
+  <p>IDEO. (2015). <em>The Field Guide To Human-Centered Design.</em> IDEO.org, DesignKit. Retrieved from <a href="https://cwu.instructure.com/courses/114824/files/15560990?wrap=1">https://cwu.instructure.com/courses/114824/files/15560990?wrap=1</a></p>
+
+  <p>Stevens, E. (2024, April 30). What are the laws of UX? All 21 laws explained. Retrieved from UX Design Institute Web Site: 
+    <a href="https://www.uxdesigninstitute.com/blog/laws-of-ux/#4_Hicks_Law">
+      https://www.uxdesigninstitute.com/blog/laws-of-ux/#4_Hicks_Law
+    </a>
+  </p>
+
+  <p>Yablonski, J. (2024). <em>Laws of UX.</em> O'Reilly Media. Retrieved from <a href="https://cwu.vitalsource.com/books/9781098146924">
+    https://cwu.vitalsource.com/books/9781098146924
+  </a>
+</p>
+
 
          <!-- Module 2.2 Blog Post Starts here -->
 
