Update 2.1 Blog post

--- a/gavrilisn/index.html
+++ b/gavrilisn/index.html
@@ -215,6 +215,61 @@
 
 
          <!-- Module 2.1 Blog Post Starts here -->
+          <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Designing for People</title>
+</head>
+<body>
+
+<p>Designing for people begins with a simple idea, if we want someone to use a product, we must understand how they think, see, and feel. Human centered design is built on this belief as it recognizes that people do not behave like machines. They get distracted, rely on habits, and make quick judgments based on what they see first. With this in mind, we can create experiences that feel intuitive rather than frustrating.</p>
+
+<p>Both ISO 9241 210 and IDEO’s Field Guide describe what it means to design for people, but they approach it differently. ISO 9241 210 focuses on structure. It lays out a clear process that starts with understanding the context of use, identifying user requirements, creating solutions, and testing them with real users (ISO, 2019). It treats human centered design as a repeatable method.</p>
+
+<p>IDEO’s Field Guide takes a different and more creative approach. It emphasizes the importance of empathy, optimism, and other emotions. IDEO encourages designers to immerse themselves in people’s lives such as observing their challenges. They will also build prototypes early so they can quickly learn (IDEO, 2015). To keep it simple, ISO creates a roadmap, while IDEO gives the mindset to explore.</p>
+
+<p>Together, these perspectives show that good design requires both discipline and empathy. To design successfully you need structure to stay grounded, but you also need curiosity and openness to understand what people need.</p>
+
+<p>People do not process screens evenly. Visual cues often decide what matters to them. This is why visual hierarchy is important. If the most important action on a page is small or buried, users will miss it. If everything looks equally important, nothing stands out.</p>
+
+<p>For example, placing a primary button in a bold color and giving it stand out to the eye. This aligns with Jakob’s Law, which states that users expect your interface to work like the ones they already know (Nielsen Norman Group, 2020). This goes to show, when you follow familiar patterns, people do not have to think as hard.</p>
+
+<p>Hick’s Law also plays a role. It states that the time it takes to decide increases with the number of choices (Hick, 1952). A cluttered menu or dashboard can overwhelm the eye. Therefore, reducing options or putting them into categories helps people focus on what matters.</p>
+
+<p>As well all know, human attention is limited. People are easily distracted and cannot hold much information in their working memory. A good explanation of this is Miller’s Law. Most people can only remember about seven items at a time or often fewer (Miller, 1956). This is why long forms, complicated navigation, or unclear steps can confuse users.</p>
+
+<p>Breaking tasks into smaller chunks, showing progress indicators, and keeping instructions simple all help reduce this memory problem. When we design with human attention span in mind, we can make it easier for people to stay on track.</p>
+
+<p>Another relevant law is Fitt’s Law. It states that the time it takes to reach a target depends on its size and distance (Fitts, 1954). For example, a small button on the corner of a mobile screen is inconvenient and a barrier. That is why it is important for interactive elements to be large enough to be easily seen and interacted with. With this in mind, the designer is showing respect for the physical context of the user.</p>
+
+<p>That is why empathy is so important. IDEO emphasizes that designers must understand people’s lives, emotions, and environments to create meaningful solutions (IDEO, 2015). ISO echoes this by requiring designers to understand the context of use, including user goals, tasks, and environments (ISO, 2019). Empathy also helps designers avoid assumptions. For example, a visually complex interface may look impressive to a designer, but to a user with low vision or cognitive fatigue, it becomes an issue. A nurse using a tablet during a busy shift needs large buttons, clear labels, and minimal steps. A student using a learning platform on a slow connection needs simple pages that load quickly. These types of decisions come from empathy.</p>
+
+<p>Norman reinforces this idea by arguing that good design must account for real human behavior, not idealized behavior (Norman, 2013). When we design with empathy, we create products that feel supportive rather than demanding.</p>
+
+<p>Designing for people means recognizing that human beings are not perfect and have limits. They often scan instead of reading, or they get overwhelmed by too many choices, and forget things very quickly. People also rely on familiar structure and patterns and can appreciate when a product feels like it what built with them in mind.</p>
+
+<p>ISO 9241 210 gives us a structured process to follow. IDEO’s Field Guide gives us the mindset to explore and empathize. The four UX laws remind us to design for perception, attention, and human behavior. When we combine these ideas, we create experiences that feel intuitive, respectful, and genuinely helpful. That is the best way to design for people.</p>
+
+<h2>References</h2>
+
+<p>Fitts, P. M. (1954). The information capacity of the human motor system in controlling the amplitude of movement. <i>Journal of Experimental Psychology, 47</i>(6), 381–391.</p>
+
+<p>Hick, W. E. (1952). On the rate of gain of information. <i>Quarterly Journal of Experimental Psychology, 4</i>(1), 11–26.</p>
+
+<p>IDEO. (2015). <i>The field guide to human centered design</i>. IDEO.org.</p>
+
+<p>International Organization for Standardization. (2019). <i>ISO 9241 210: Ergonomics of human system interaction Human centered design for interactive systems</i>.</p>
+
+<p>Miller, G. A. (1956). The magical number seven, plus or minus two. <i>Psychological Review, 63</i>(2), 81–97.</p>
+
+<p>Nielsen Norman Group. (2020). Jakob’s Law of Internet User Experience. https://www.nngroup.com</p>
+
+<p>Norman, D. A. (2013). <i>The design of everyday things</i>. Basic Books.</p>
+
+</body>
+</html>
+
 
          <!-- Module 2.2 Blog Post Starts here -->
 
